# HABEXpico

./: .gitignore  .travis.yaml  .travis.yml  README.md
Data/: HABEXPico8_A_fieldtest_20726_hermosa_beach.txt
Datastore/FieldTestData/: HABEXPico8_A_fieldtest_20726_hermosa_beach.txt  nmea_stress_test.txt  random_data.txt
Firmware/: Cargo.toml  README.md  build.rs  flash.sh  gpio.c  gpio.h  habexpico.elf  habexpico.hex  habexpico.map  i2c.c  i2c.h  main.c  main.h  makefile  openocd_flash.sh  openocd_session.sh  program.hex  spi.c  spi.h  uart.c  uart.h
Firmware/src/: Cargo.toml  README.md  console.rs  gps.rs  habex.rs  main.rs  nfmt.rs  nmea.rs  pal.rs  periph.rs  power.rs  radio.rs
Firmware/src/src/: main.rs
Firmware/tb/: gps_cold_start_data_capture.txt  gps_no_lock_data_capture.txt  gps_time_lock_data_capture.txt
GSE/: README.md
Hardware/: .habexpico.sch.lck  .habexpico7.brd.lck  HABEXpico8_Mass_and_Power_Budget.xlsx  StateMachine.drawio  habexpico.brd  habexpico.sch  ~$HABEXpico8_Mass_and_Power_Budget.xlsx
Hardware/HABEXpico8/: .HABEXpico8.brd.lck  HABEXpico8.b##  HABEXpico8.b#1  HABEXpico8.b#2  HABEXpico8.b#3  HABEXpico8.b#4  HABEXpico8.b#5  HABEXpico8.b#6  HABEXpico8.b#7  HABEXpico8.b#8  HABEXpico8.b#9  HABEXpico8.brd  HABEXpico8.s#1  HABEXpico8.s#2  HABEXpico8.s#3  HABEXpico8.s#4  HABEXpico8.s#5  HABEXpico8.s#6  HABEXpico8.s#7  HABEXpico8.s#8  HABEXpico8.s#9  HABEXpico8.sch  HABEXpico8_BOM.csv  HABEXpico8_BOM.xlsx  eagle.epf  habexpico8.l#1  habexpico8.lbr
Hardware/Simulation/RF_Front_End/: L0_C0_Resonant_Tank.sch  L0_C0_Resonant_Tank.sch.final.net  L0_C0_Resonant_Tank.sch.net  L0_C0_Resonant_Tank.sch.sim  L0_C0_Resonant_Tank.sch.simcfg  LCHOKE_DC_Bias.sch  LX_CX_Matching_Network.sch  Low_Pass_Filter.sch  Low_Pass_Filter.sch.final.net  Low_Pass_Filter.sch.net  Low_Pass_Filter.sch.sim  Low_Pass_Filter.sch.simcfg  RF_Front_End.dpl  RF_Front_End.sch  eagle.epf
Testscripts/: Cargo.toml  README.md
Testscripts/gps_ts/: Cargo.toml
Testscripts/gps_ts/src/: gps_ts.rs  lib.rs
Testscripts/nfmt_ts/: Cargo.toml
Testscripts/nfmt_ts/src/: lib.rs  nfmt_ts.rs
Testscripts/nmea_ts/: Cargo.toml
Testscripts/nmea_ts/src/: lib.rs  nmea_stress_cases.rs
