[package]
authors = ["Arko <arko2600@gmail.com>"]
categories = ["embedded", "no-std"]
keywords = ["arm", "cortex-m", "template"]
license = "MIT OR Apache-2.0"
edition = "2018"
name = "habexpico"
version = "0.0.1"

[dependencies]
cortex-m-rt = "0.6.8"
panic-halt = "0.2.0"

[dependencies.stm32l0xx-hal]
version = "0.1.4"
features = ["stm32l0x1", "rt"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
codegen-units = 1
incremental = false