[package]
authors = ["Arko <arko2600@gmail.com>"]
categories = ["embedded", "no-std"]
keywords = ["arm", "cortex-m", "template"]
license = "MIT OR Apache-2.0"
edition = "2018"
name = "habexpico"
version = "0.0.1"

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }
cortex-m = {version = "0.5.8", features = ["const-fn"] }
cortex-m-semihosting = "0.3.2"
cortex-m-rt = "0.6.8"
panic-halt = "0.2.0"
nb = "0.1.2"

[dependencies.stm32l0xx-hal]
version = "0.1.6"
features = ["stm32l0x1", "rt"]

[profile.dev]
codegen-units = 1
incremental = false
debug = true
opt-level = "s"

[profile.release]
codegen-units = 1
lto = true
debug = true
opt-level = "s"