[package]
authors = ["Arko <arko2600@gmail.com>"]
categories = ["embedded", "no-std"]
keywords = ["arm", "cortex-m", "template"]
license = "MIT OR Apache-2.0"
name = "habexpico"
version = "0.3.4"

[dependencies]
cortex-m = "0.5.6"
cortex-m-rt = "0.5.3"
cortex-m-semihosting = "0.3.1"
panic-semihosting = "0.3.0"
panic-abort = "0.2.0"

[dependencies.stm32l0]
version = "0.2.2"
features = ["stm32l0x1", "rt"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
codegen-units = 1
incremental = false